# unifai-hack

./: .gitignore  AGENTS.md  ARCHITECTURE.md  PROJECT_SPEC.md  README.md  TASKS.md  TESTING.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/data/: orchestrator.db
backend/docs/shared_context/: AGENT_MARKETPLACE.md  BILLING_SUBSCRIPTIONS.md  HOSTED_AGENTS.md  PROJECT_OVERVIEW.md  PROJECT_PLAN.md  TASK_GRAPH.md  TEAM_MEMBERS.md
backend/scripts/: seed_db.py  seed_marketplace.py
backend/src/: config.py  main.py
backend/src/api/: __init__.py  agents.py  auth.py  billing.py  dashboards.py  github.py  marketplace.py  plans.py  projects.py  risks.py  schemas.py  schemas_marketplace.py  shared_context.py  subtasks.py  teams.py  users.py
backend/src/core/: orchestrator.py  reasoning_logs.py  state.py
backend/src/services/: agent_assignment.py  agent_inference.py  context_service.py  github_service.py  llm_service.py  marketplace_service.py  paid_service.py  reviewer_service.py  stripe_service.py  task_manager.py  task_scheduler.py
backend/src/skills/: check_security.md  debug_code.md  design_component.md  explain_code.md  generate_code.md  refactor_code.md  research.md  review_code.md  suggest_improvements.md
backend/src/storage/: database.py  models.py
backend/tests/: test_context_service.py  test_github.py  test_m5_t5_context_wiring.py  test_marketplace_service.py  test_orchestrator.py  test_paid_service.py  test_reasoning_logs.py  test_reviewer.py  test_skills.py  test_stripe_service.py
frontend/: README.md  (+6 more)
(+91 files in other folders)
